# NapCatLink

./: .gitignore  Cargo.toml  README.md
docs/development/: architecture.md
docs/plans/: 2026-03-04-napcat-link-design.md  2026-03-04-napcat-link-implementation.md
docs/user/: api-reference.md  getting-started.md
examples/: basic.rs  echo_bot.rs  group_admin.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/api/: account.rs  client.rs  dispatcher.rs  file.rs  group.rs  media.rs  message.rs  mod.rs  napcat.rs  raw.rs  request.rs  stream.rs  system.rs
src/connection/: actor.rs  heartbeat.rs  mod.rs  reconnect.rs  state.rs
src/event/: bus.rs  mod.rs  router.rs
src/types/: api.rs  message.rs  mod.rs
src/types/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs  shared.rs
src/util/: logger.rs  mod.rs
tests/: api_client_test.rs  api_modules_test.rs  client_test.rs  config_test.rs  connection_test.rs  error_test.rs  event_test.rs  event_types_test.rs  message_segment_test.rs
